# biochatter-light

./: .bumpversion.cfg  .dockerignore  .gitignore  DEVELOPER.md  Dockerfile  README.md  _llm_connect.py  app.py  docker-compose.yml  environment.yml  pyproject.toml  query.py  requirements.txt  style.css
.devcontainer/: Dockerfile  devcontainer.json  post-install.sh
.streamlit/: config.toml
biochatter_light/: _interface.py
chatgse/: _docsum.py  _interface.py  _llm_connect.py  _log.py  _ontologyMapper.py  _stats.py
components/: buttons.py  config.py  constants.py  display.py  dropdown.py  handlers.py  input.py  kg.py  logic.py  panels.py  prompts.py  static.py
components/panels/: __init__.py  correcting_agent.py  filling_template.py  genetics.py  kg.py  project.py  rag_agent.py  schema_config.py  schema_utils.py
input/: anything.tsv  decoupler.txt  progeny.csv
test/: test_llm_connect.py  test_vectorstore.py
