[tool.poetry]
name = "chatgse"
version = "0.2.31"
description = "Gene set interpretation assisted by Large Language Models and more"
authors = ["Sebastian Lobentanzer <sebastian.lobentanzer@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
streamlit = "^1.21.0"
pandas = "~1.5"
loguru = "^0.7.0"
biochatter = "^0.1.6"
tabulate = "^0.9.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
