[tool.poetry]
name = "biochatter-light"
version = "0.4.3"
description = "The light frontend for BioChatter, in pure Python"
authors = ["Sebastian Lobentanzer <sebastian.lobentanzer@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
streamlit = "^1.21.0"
pandas = "^1.1.5"
loguru = "^0.7.0"
biochatter = {version = "0.4.7"}
tabulate = "^0.9.0"
neo4j-utils = { version = "^0.0.7", optional = true }

[tool.poetry.extras]
neo4j = ["neo4j-utils"]

[tool.poetry.group.dev.dependencies]
bump2version = "^1.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 80
